infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: ticketing/auth
        resources:
          limits:
            memory: "1280Mi"
            cpu: "5000m"
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
