infra/k8s/auth-mongo-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo
spec:
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        image: mongo
        resources:
          limits:
            memory: "5200Mi"
            cpu: "5000m"
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: auth-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
