infra/k8s/tickets-mongo-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo
spec:
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
      - name: tickets-mongo
        image: mongo
        resources:
          limits:
            memory: "1200Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: tickets-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
