infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress-srv
  labels:
    name: ticketing-ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /api/auth/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-cluster-ip-srv
            port: 
              number: 3000

      - path: /api/tickets/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tickets-cluster-ip-srv
            port:
              number: 3000

      - path: /api/orders/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-cluster-ip-srv
            port:
              number: 3000

      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-cluster-ip-srv
            port:
              number: 3000
